dashboard profile front project list by role

--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -77,6 +77,22 @@
   }
 }
 
+.fa-project {
+  font-size: 1.5rem;
+}
+
+.box-project-po {
+  border-left: var(--blueish) solid 5px;
+}
+
+.box-project-volunteer {
+  border-left: var(--secondary-alt) solid 5px;
+}
+
+.box-project-waiting-volunteer {
+  border-left: var(--secondary) solid 5px;
+}
+
 .fa-recommendation {
   font-size: 2.5rem;
 }
