--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -1,4 +1,4 @@
-<h4 class="my-3 text-center">Your profile</h4>
+<h4 class="my-3">Your profile</h4>
 <p>Email : {{ app.user.email }}</p>
 {% if not app.user.organization %}
     {% if app.user.firstname is empty or app.user.lastname is empty %}
