--- a/templates/component/project/_project_tchat.html.twig
+++ b/templates/component/project/_project_tchat.html.twig
@@ -21,7 +21,7 @@
 
             <div class="card m-1 border border-greenish" style="height: 400px;">
                 <div class="card-body overflow-auto">
-                    <p class="card-text">They have access to the tchat : </p>
+                    <p class="card-text">They have access : </p>
                     <ul class="list-inline">
                         {% for user in project.tchat.users %}
                             <li>
