refine displays dashboard

--- a/templates/component/dashboard/_user_received_recommendations.html.twig
+++ b/templates/component/dashboard/_user_received_recommendations.html.twig
@@ -8,4 +8,6 @@
         </p>
         <p>{{ recommendation.content }}</p>
     </div>
+{% else %}
+    <p>You don't have any recommendations for now</p>
 {% endfor %}
