--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -23,6 +23,16 @@ html {
   scroll-behavior: smooth;
 }
 
+.avatar-img {
+  width : 70px;
+  height : 70px;
+  background:  linear-gradient(to right, var(--primary), var(--secondary)) border-box;
+  border: 3px solid transparent;
+  border-radius:50px;
+  display:inline-block;
+
+}
+
 .text-shadow {
   text-shadow: 0 0 2px white;
 }
