--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -2,7 +2,8 @@
 <div class="card container p-0 mb-5">
     <div class="row p-0">
         <div class="d-flex align-items-center justify-content-center row p-0">
-            <img class="col-11 col-sm-5 col-lg-4 m-1 p-0 rounded-circle" src="https://thispersondoesnotexist.com/image" alt="">
+            <img class="col-11 col-sm-5 col-lg-4 m-1 p-0 rounded-circle" src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}" alt="picture avatar">
+
             <div class="card-body col-12 col-sm-6 col-lg-7">
                 {% if not app.user.organization %}
                     {% if app.user.firstname is empty or app.user.lastname is empty %}
