--- a/templates/component/homepage/_header.html.twig
+++ b/templates/component/homepage/_header.html.twig
@@ -37,13 +37,17 @@
             </li>
         </ul>
         <ul class="navbar-nav text-blueish form-inline">
-
             {% if is_granted('IS_AUTHENTICATED_FULLY')%}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('dashboard_index') }}">Dashboard</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="avatar-img" src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}" alt="picture avatar">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="nav-link" href="{{ path('dashboard_index') }}">Dashboard</a>
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                </div>
             </li>
-            {% endif %}
-            {% if not is_granted('IS_AUTHENTICATED_FULLY')%}
+                {% else %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Create Account
@@ -53,14 +57,10 @@
                     <a class="dropdown-item" href="{{ path('app_register_organization') }}">As an organization</a>
                 </div>
             </li>
-            {% endif %}
             <li class="nav-item">
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-                {% else %}
-                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-                {% endif %}
+                <a class="nav-link" href="{{ path('app_login') }}">Login</a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
