--- a/templates/profile/edit_avatar.html.twig
+++ b/templates/profile/edit_avatar.html.twig
@@ -2,24 +2,29 @@
 
 {% block framed %}
 
-    {{ form_start(form) }}
-    {{ form_rest(form) }}
-    <button class="btn btn-secondary mt-2">{{ button_label|default('Submit') }}</button>
-    {{ form_end(form) }}
-
-
-<div class="container-avatar">
-    <h1>Crop a round image</h1>
-    <h3>Image</h3>
-    <div>
-        <img id="image" src="{{ asset('uploads/images/avatar/') }}{{ user.avatar.name }}" alt="Picture">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="h3">1. Search for Picture</div>
+                {% form_theme form 'bootstrap_4_layout.html.twig' %}
+                {{ form_start(form) }}
+                {{ form_row(form) }}
+                <button class="btn btn-secondary">{{ button_label|default('Submit') }}</button>
+                {{ form_end(form) }}
+            </div>
+            <div class="image-cropping col" data-path="{{ path('dashboard_save_avatar', {id: app.user.id }) }}" data-id="{{ app.user.id }}">
+                <h3>2. Crop a round image</h3>
+                {% if user.avatar.name == 'DEFAULTAVATAR_sdg-wheel.png' %}
+                    <img id="image-avatar" src="{{ asset('build/images/sdg_icons/sdg-wheel.png') }}" class="img-fluid">
+                {% else %}
+                    <img id="image-avatar" src="{{ asset('uploads/images/avatar/') }}{{ user.avatar.name }}" class="img-fluid">
+                {% endif %}
+                <button type="button" id="button">Crop</button>
+                <div id="result" class=""></div>
+            </div>
+        </div>
     </div>
-    <h3>Result</h3>
-    <p>
-        <button type="button" id="button">Crop</button>
-    </p>
-    <div id="result"></div>
-</div>
+
 
 
 
@@ -33,7 +38,7 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('cropper') }}
+    {{ encore_entry_script_tags('cropper-wanna') }}
 {% endblock %}
 
 
