--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -1,47 +1,59 @@
 <h4 class="my-3">Your profile</h4>
 <div class="card container p-0 mb-5">
-    <div class="row p-0">
-        <div class="d-flex align-items-center justify-content-center row p-0">
-            <img class="col-11 col-sm-5 col-lg-4 m-1 p-0 rounded-circle" src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}" alt="picture avatar">
+    <div class="d-flex position-relative align-items-center justify-content-center row p-0">
+        <div class="col position-relative col-11 col-sm-5 col-lg-4">
+            {% if is_granted('IS_AUTHENTICATED_FULLY')%}
+                <div class="position-absolute">
+                    <a href="{{ path('dashboard_edit_avatar', {'id': app.user.id}) }}"><i class="fas fa-user-edit"></i></a>
+                </div>
+                {% if app.user.avatar.name == 'DEFAULTAVATAR_sdg-wheel.png' %}
+                    <img class="m-1 p-0 rounded-circle img-fluid"  src="{{ asset('build/images/sdg_icons/sdg-wheel.png') }}">
+                {% else %}
+                    <img class="m-1 p-0 rounded-circle img-fluid"  src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}">
+                {% endif %}
+            {% endif %}
+        </div>
 
-            <div class="card-body col-12 col-sm-6 col-lg-7">
-                {% if not app.user.organization %}
-                    {% if app.user.firstname is empty or app.user.lastname is empty %}
-                        <p class="alert alert-danger">Edit your profile !</p>
-                    {% else %}
-                        <p>Firstname : {{ app.user.firstname }}</p>
-                        <p>Lastname : {{ app.user.lastname }}</p>
-                    {% endif %}
+
+        <div class="card-body col-12 col-sm-6 col-lg-7">
+            {% if not app.user.organization %}
+                {% if app.user.firstname is empty or app.user.lastname is empty %}
+                    <p class="alert alert-danger">Edit your profile</p>
                 {% else %}
-                    <p>Organization : {{ app.user.organization.name }}</p>
+                    <p>Firstname : {{ app.user.firstname }}</p>
+                    <p>Lastname : {{ app.user.lastname }}</p>
                 {% endif %}
-                <p>Email : {{ app.user.email }}</p>
-                <p class="card-text">
-                <p>Biography : {{ (app.user.biography != null ? app.user.biography : 'You can add a biography by editing your profile') }}</p>
-                <p>Country : {{ (app.user.country != null ? app.user.country.name : '<p class="alert alert-danger">Don\'t forget to add your country. This information can be important for a project owner and the organization of a project</p>') }}</p>
-                <p>Languages : </p>
-                {% if app.user.languages is not empty %}
-                    {% for language in app.user.languages %}
-                        <ul>
-                            <li class="list-unstyled">
-                                {{ language.name }}
-                            </li>
-                        </ul>
-                    {% endfor %}
-                {% else %}
-                    <p class="alert alert-danger">Don't forget to add your spoken languages. This information can be important for a project owner</p>
-                {% endif %}
+            {% else %}
+                <p>Organization : {{ app.user.organization.name }}</p>
+            {% endif %}
+            <p>Email : {{ app.user.email }}</p>
+            <p class="card-text">
+            <p>Biography : {{ (app.user.biography != null ? app.user.biography : 'You can add a biography by editing your profile') }}</p>
+            <p>Country : {{ (app.user.country != null ? app.user.country.name : '<p class="alert alert-danger">Don\'t forget to add your country. This information can be important for a project owner and the organization of a project</p>') }}</p>
+            <p>Languages : </p>
+            {% if app.user.languages is not empty %}
+                {% for language in app.user.languages %}
+                    <ul>
+                        <li class="list-unstyled">
+                            {{ language.name }}
+                        </li>
+                    </ul>
+                {% endfor %}
+            {% else %}
+                <p class="alert alert-danger">Don't forget to add your spoken languages. This information can be important for a project owner</p>
+            {% endif %}
+            <div class="d-flex justify-content-around flex-wrap">
+                <a class="my-3" href="{{ path('dashboard_edit', {'id': app.user.id}) }}">
+                    <button class="btn btn-secondary-alt">Edit your profile</button>
+                </a>
+                <form class="my-3" method="post" action="{{ path('dashboard_delete', {'id': app.user.id}) }}" onsubmit="return confirm('Are you sure ? Your account will be delete forever');">
+                    <button class="btn btn-primary">Delete my account</button>
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app.user.id) }}">
+                </form>
             </div>
         </div>
     </div>
-    <div class="card-footer d-flex justify-content-around flex-wrap">
-        <a class="my-3" href="{{ path('dashboard_edit', {'id': app.user.id}) }}">
-            <button class="btn btn-secondary-alt">Edit my profil</button>
-        </a>
-        <form class="my-3" method="post" action="{{ path('dashboard_delete', {'id': app.user.id}) }}" onsubmit="return confirm('Are you sure ? Your account will be delete forever');">
-            <button class="btn btn-primary">Delete my account</button>
-            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app.user.id) }}">
-        </form>
-    </div>
+
+
 </div>
 
