--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -1,24 +1,24 @@
 <div class="d-flex flex-column align-content-center justify-content-center">
-<div class="button-group filter-button-group text-center mb-5">
-    <div><button class="border-0 p-0">
-        <img class="project-filters" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
-    </button>
-    {% for sdg in sdgs  %}
-        <button class="border-0 p-0">
-            <img class="project-filters" title="{{ sdg.name }}" data-filter=".{{ sdg.identifier }}" src="{{ asset('build/images/sdg_icons/' ~ sdg.image)}}" style="width: 50px" >
-        </button>
-    {% endfor %}
+    <div class="button-group filter-button-group text-center mb-5">
+        <div><button class="border-0 p-0">
+                <img class="project-filters" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
+            </button>
+            {% for sdg in sdgs  %}
+                <button class="border-0 p-0">
+                    <img class="project-filters" title="{{ sdg.name }}" data-filter=".{{ sdg.identifier }}" src="{{ asset('build/images/sdg_icons/' ~ sdg.image)}}" style="width: 50px" >
+                </button>
+            {% endfor %}
+        </div>
+        <div class="text-center mb-4">
+            <select class="project-filters custom-select col-2 mt-2">
+                <option selected>Project Status</option>
+                {#        <option data-filter=".status_0" value="1">To be validated</option>#}
+                <option data-filter=".status_1" value="1">Looking for volunteers</option>
+                <option data-filter=".status_2" value="1">Opened</option>
+                <option data-filter=".status_3" value="1">Closed</option>
+            </select>
+        </div>
     </div>
-    <div class="text-center mb-4">
-    <select class="project-filters custom-select col-2 mt-2">
-        <option selected>Project Status</option>
-{#        <option data-filter=".status_0" value="1">To be validated</option>#}
-        <option data-filter=".status_1" value="1">Looking for volunteers</option>
-        <option data-filter=".status_2" value="1">Opened</option>
-        <option data-filter=".status_3" value="1">Closed</option>
-    </select>
-    </div>
-</div>
 </div>
 
 
@@ -30,7 +30,11 @@
                     <div class="element-item vh-50 m-3 p-0 card {% for sdg in project.sdgs %}{{ sdg.identifier }}{% endfor %} status_{{ project.status}} col-md-3 col-sm-12" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
                         <div class="position-relative">
                             <a href="{{ path('project_show', {'id': project.id}) }}">
-                                <img class="card-img-top m-0 status_{{ project.status}}" src="https://picsum.photos/400/400?random={{ loop.index }}" alt="Project Image">
+                                {% if project.cover == 'DEFAULT_COVER.png' %}
+                                    <img class="card-img-top m-0 status_{{ project.status}}" src="{{ asset('build/images/sdg_icons/DEFAULT_COVER.png') }}" alt="Project Cover">
+                                {% else %}
+                                    <img class="card-img-top m-0 status_{{ project.status}}" src="{{ asset('uploads/images/projectcover/') }}{{ project.cover }}" alt="Project Image">
+                                {%  endif %}
                             </a>
                             {% if project.status == 1 %}
                                 <a href="{{ path('project_show', {'id': project.id}) }}"><button class="btn-lookingvolunteers btn-primary">Looking for Volunteers</button></a>
