--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -10,3 +10,9 @@
         <button class="btn btn-primary mb-3">Create a request</button>
         {{ form_end(form) }}
 {% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('addCover') }}
+{% endblock %}
