--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -4,23 +4,46 @@
             <div>
                 <h1>Inbox</h1>
                 <p><a href="{{ path('messages_new')}}">Write a new message</a></p>
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#received" role="tab"
-                           aria-controls="cards" aria-selected="true">Received messages</a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="table-tab" data-toggle="tab" href="#sent" role="tab" aria-controls="table"
-                           aria-selected="false">Sent messages</a>
-                    </li>
-                </ul>
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active justify-content-center" id="received" role="tabpanel" aria-labelledby="cards-tab">
-                        {% include 'component/message/_messages_received.html.twig' %}
-                    </div>
-                    <div class="tab-pane fade" id="sent" role="tabpanel" aria-labelledby="table-tab">
-                        {% include 'component/message/_messages_sent.html.twig' %}
-                    </div>
+{#                <ul class="nav nav-tabs" id="myTab" role="tablist">#}
+{#                    <li class="nav-item" role="presentation">#}
+{#                        <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#received" role="tab"#}
+{#                           aria-controls="cards" aria-selected="true">Received messages</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item" role="presentation">#}
+{#                        <a class="nav-link" id="table-tab" data-toggle="tab" href="#sent" role="tab" aria-controls="table"#}
+{#                           aria-selected="false">Sent messages</a>#}
+{#                    </li>#}
+{#                </ul>#}
+{#                <div class="tab-content" id="myTabContent">#}
+{#                    <div class="tab-pane fade show active justify-content-center" id="received" role="tabpanel" aria-labelledby="cards-tab">#}
+{#                        {% include 'component/message/_messages_received.html.twig' %}#}
+{#                    </div>#}
+{#                    <div class="tab-pane fade" id="sent" role="tabpanel" aria-labelledby="table-tab">#}
+{#                        {% include 'component/message/_messages_sent.html.twig' %}#}
+{#                    </div>#}
+{#                </div>#}
+
+                <div>
+                    {% for contact in contacts %}
+                        <a href="{{ path('messages_conv', {'user': contact.id}) }}">
+                        <li>
+                        {{ contact.firstname }}
+                        {{ contact.lastname }}
+                        </li>
+                        </a>
+{#                        {% if message.receiver != app.user %}#}
+{#                        <a href="{{ path('messages_conv', {'user': message.receiver.id }) }}"><li>#}
+{#                        {{ message.receiver.firstname }}#}
+{#                        {{ message.receiver.lastname }}#}
+{#                        </li></a>#}
+{#                        {% elseif message.sender == app.user %}#}
+{#                        <a href="{{ path('messages_conv', {'user': message.receiver.id }) }}"><li>#}
+{#                            {{ message.sender.firstname }}#}
+{#                            {{ message.sender.lastname }}#}
+{#                                {{ message.content }}#}
+{#                        </li></a>#}
+{#                        {% endif %}#}
+                    {% endfor %}
                 </div>
             </div>
         </div>
