front of badge pill count of notifications not read

--- a/assets/styles/notification.scss
+++ b/assets/styles/notification.scss
@@ -8,6 +8,10 @@
   display: none;
 }
 
+.notification-badge {
+  font-size: 0.8rem;
+}
+
 .notification-button .dropdown-item {
   white-space: normal;
 }
