--- a/assets/styles/notification.scss
+++ b/assets/styles/notification.scss
@@ -14,6 +14,7 @@
 
 .notification-button .dropdown-item {
   white-space: normal;
+  border-left: 5px solid;
 }
 
 .notification-button .dropdown-menu {
