--- a/templates/notification/_index.html.twig
+++ b/templates/notification/_index.html.twig
@@ -7,10 +7,15 @@
     </button>
     <div class="dropdown-menu dropdown-menu-right py-0 mr-1" aria-labelledby="dropdownMenuButton">
         {% for notification in notifications %}
-            <a class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}"
+            <form action="{{ path('notification_read', {'id': notification.id}) }}" method="post">
+                <button class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}">
+                    <i class="fas fa-bookmark mr-2"></i>{{ notification.content }}
+                </button>
+            </form>
+            {#<a class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}"
                href="{{ path('notification_read', {'id': notification.id}) }}">
                 <i class="fas fa-bookmark mr-2"></i>{{ notification.content }}
-            </a>
+            </a>#}
         {% endfor %}
     </div>
 </div>
