--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -16,7 +16,7 @@
                 <div class="tab-pane fade changingcontent show active" id="v-pills-projects" role="tabpanel" aria-labelledby="v-pills-projects-tab">
                     {% include 'component/dashboard/_user_participations.html.twig' %}
                 </div>
-                <div class="tab-pane fade changingcontent" id="v-pills-accomplishments" role="tabpanel" aria-labelledby="v-pills-accomplishments-tab">
+                <div class="tab-pane fade changingcontent" id="v-pills-recommendations" role="tabpanel" aria-labelledby="v-pills-recommendations-tab">
                     {% include 'component/dashboard/_user_received_recommendations.html.twig' %}
                 </div>
                 {% if not app.user.organization %}
