--- a/templates/notification/_index.html.twig
+++ b/templates/notification/_index.html.twig
@@ -6,7 +6,7 @@
         {% endif %}
     </button>
     <div class="dropdown-menu dropdown-menu-right py-0 mr-1" aria-labelledby="dropdownMenuButton">
-        {% for notification in notifications %}
+        {% for notification in last_notifications %}
             <form action="{{ path('notification_read', {'id': notification.id}) }}" method="post">
                 <button class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}">
                     {% if notification.isRead %}
