--- a/templates/notification/_index.html.twig
+++ b/templates/notification/_index.html.twig
@@ -6,17 +6,21 @@
         {% endif %}
     </button>
     <div class="dropdown-menu dropdown-menu-right py-0 mr-1" aria-labelledby="dropdownMenuButton">
-        {% for notification in last_notifications %}
-            <form action="{{ path('notification_read', {'id': notification.id}) }}" method="post">
-                <button class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}">
-                    {% if notification.isRead %}
-                        <i class="fas fa-check-circle"></i>
-                    {% else %}
-                        <i class="fas fa-bookmark mr-2"></i>
-                    {% endif %}
-                    {{ notification.content }}
-                </button>
-            </form>
-        {% endfor %}
+        {% if last_notifications|length == 0 %}
+            <p class="font-italic">You don't have any notification for now ...</p>
+        {% else %}
+            {% for notification in last_notifications %}
+                <form action="{{ path('notification_read', {'id': notification.id}) }}" method="post">
+                    <button class="dropdown-item alert alert-{{ (notification.isRead) ? 'light' : 'blueish' }} my-0 border-left-{{ (notification.isRead) ? 'light' : 'blueish' }}">
+                        {% if notification.isRead %}
+                            <i class="fas fa-check-circle"></i>
+                        {% else %}
+                            <i class="fas fa-bookmark mr-2"></i>
+                        {% endif %}
+                        {{ notification.content }}
+                    </button>
+                </form>
+            {% endfor %}
+        {% endif %}
     </div>
 </div>
