--- a/templates/component/homepage/_header.html.twig
+++ b/templates/component/homepage/_header.html.twig
@@ -33,14 +33,14 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="{{ path('article_index') }}">Blog</a>
             </li>
         </ul>
         <ul class="navbar-nav text-blueish form-inline">
             {% if is_granted('IS_AUTHENTICATED_FULLY')%}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="avatar-img" src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}" alt="picture avatar">
+                     <img class="avatar-img" src="{{ asset('uploads/images/avatar/') }}{{ app.user.avatar.name }}" alt="picture avatar">
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="nav-link" href="{{ path('dashboard_index') }}">Dashboard</a>
