messenger end fix

--- a/templates/component/dashboard/_navbar_dashboard.html.twig
+++ b/templates/component/dashboard/_navbar_dashboard.html.twig
@@ -6,6 +6,6 @@
             <a class="nav-link changingtab" id="v-pills-skills-tab" data-toggle="pill" href="#v-pills-skills" role="tab" aria-controls="v-pills-skills" aria-selected="false">Your Skills</a>
         {% endif %}
         <a class="nav-link changingtab" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
-        <a class="nav-link changingtab" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+        <a class="nav-link changingtab" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
     </div>
 </nav>
