--- a/templates/component/message/_message_back.html.twig
+++ b/templates/component/message/_message_back.html.twig
@@ -2,10 +2,10 @@
 {% block framed %}
     <h2>Send a message</h2>
 <div class="row mt-5 shadow border solid 1px">
-    {% form_theme form 'bootstrap_4_layout.html.twig' %}
-    {{ form_start(form) }}
-    {{ form_row(form.content) }}
-    <button>Submit</button>
-    {{ form_end(form) }}
+{#    {% form_theme form 'bootstrap_4_layout.html.twig' %}#}
+{#    {{ form_start(form) }}#}
+{#    {{ form_row(form.content) }}#}
+{#    <button>Submit</button>#}
+{#    {{ form_end(form) }}#}
 </div>
 {% endblock %}
