--- a/templates/component/dashboard/_user_received_recommendations.html.twig
+++ b/templates/component/dashboard/_user_received_recommendations.html.twig
@@ -1,13 +1,23 @@
 <h4 class="mt-3 mb-4">They recommend you :</h4>
-{% for recommendation in app.user.receivedRecommendations %}
-    <div class="alert alert-greenish recommendation-box">
-        <p class="d-flex align-items-center flex-wrap">
-            <i class="fas fa-award text-greenish fa-recommendation my-2"></i>
-            <span class="mx-2 pr-2 border-right border-greenish"> Project : {{ recommendation.project.title }} </span>
-            <span class="font-italic font-weight-bold mr-2">{{ recommendation.sender }}</span><span class="font-italic"> says :</span>
-        </p>
-        <p>{{ recommendation.content }}</p>
-    </div>
-{% else %}
-    <p>You don't have any recommendations for now</p>
-{% endfor %}
+    {% for recommendation in app.user.receivedRecommendations %}
+        {% if recommendation.hasReceivedFrom(app.user) %}
+            <div class="alert alert-greenish recommendation-box">
+                <i class="fas fa-award text-greenish fa-recommendation my-2"></i>
+                <span class="mx-2 pr-2 border-right border-greenish">{{ recommendation.project.title }} </span>
+                <span class="font-italic font-weight-bold mr-2">{{ recommendation.sender }}</span><span class="font-italic"> says :</span>
+                </p>
+                <p>{{ recommendation.content }}</p>
+            </div>
+        {% else %}
+            <div class="alert alert-greenish recommendation-box">
+            <p>Please write a review to {{ recommendation.sender }} to see yours !</p>
+            <div class="d-flex justify-content-center mt-3">
+                <a href="{{ path('recommendation_new_to_PO', {'project': recommendation.project.id, 'projectOwner': recommendation.sender.id}) }}" class="btn btn-greenish">
+                    Add a review <i class="far fa-thumbs-up"></i>
+                </a>
+            </div>
+        {% endif %}
+            </div>
+    {% else %}
+        <p>You don't have any recommendations for now</p>
+    {% endfor %}
