--- a/templates/component/dashboard/_mini-profile.html.twig
+++ b/templates/component/dashboard/_mini-profile.html.twig
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col-md-6 ml-auto">
                             <p class="font-weight-bold">About me</p>
-                            {%  if not user.biography %}
+                            {%  if user.biography %}
                                 {{ user.biography }}
                             {%  else %}
                                 No biography provided
