--- a/templates/recommendation/new_to_volunteer.html.twig
+++ b/templates/recommendation/new_to_volunteer.html.twig
@@ -8,7 +8,7 @@
             <div class="row justify-content-center p-0">
                 <div class="col-12 d-flex p-0">
                     <div class="row flex-column justify-content-center align-items-center">
-                        <img class="m-1 col-5 col-sm-4 col-md-3 col-lg-2 recommendation-profile" src="https://thispersondoesnotexist.com/image" alt="{{ volunteer.firstname }} {{ volunteer.lastname }}">
+                        <img class="m-1 col-5 col-sm-4 col-md-3 col-lg-2 recommendation-profile" src="{{ asset('uploads/images/avatar/') }}{{ volunteer.avatar.name }}" alt="{{ volunteer.firstname }} {{ volunteer.lastname }}">
                         <h5 class="text-secondary font-weight-bold my-3">{{ volunteer.firstName }} {{ volunteer.lastName }}</h5>
                         <ul class="list-unstyled">Assigned tasks :
                             {% for task in project.tasks %}
