Avatar Edition is now a step by step UX process

--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -100,6 +100,15 @@
 
 }
 
+.cropper-bg {
+  background-color: white !important;
+  background-image: none !important;
+}
+
+.cropper-modal {
+  opacity: 0 !important;
+}
+
 .cropper-view-box,
 .cropper-face {
   border-radius: 50%;
