--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -20,8 +20,7 @@
                                                     {% endif %}
                                             </div>
                                             <div class="ml-2">
-                                                {{ contact.firstname }}
-                                                {{ contact.lastname }}
+                                                {{ contact.FullNameIfMemberOrONG }}
                                             </div>
                                         </div>
                                     </a>
