--- a/templates/recommendation/new_to_PO.html.twig
+++ b/templates/recommendation/new_to_PO.html.twig
@@ -6,10 +6,10 @@
 {% if app.user and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_VOLUNTEER')) %}
     <div class="container">
     <div class="row justify-content-center p-0">
-        <div class="col-12 d-flex p-0">
+        <div class="col-12 d-flex justify-content-center p-0">
             <div class="row flex-column justify-content-center align-items-center">
-                <img class="m-1 col-5 col-sm-4 col-md-3 col-lg-2 recommendation-profile" src="https://thispersondoesnotexist.com/image" alt="{{ projectOwner.firstname }} {{ projectOwner.lastname }}">
-                <h5 class="text-secondary font-weight-bold my-3">{{ projectOwner.firstName }} {{ projectOwner.lastName }}</h5>
+                <img class="m-1 col-5 recommendation-profile" src="{{ asset('uploads/images/avatar/') }}{{ projectOwner.avatar.name }}" alt="{{ projectOwner.FullNameIfMemberOrONG }}">
+                <h5 class="text-secondary font-weight-bold my-3">{{ projectOwner.FullNameIfMemberOrONG }}</h5>
             </div>
         </div>
         </div>
